fixed tutorial button being covered

--- a/website/stylesclean.css
+++ b/website/stylesclean.css
@@ -199,7 +199,7 @@ header {
 #tutorialbutton {
   position: absolute;
   top: 15vh;
-  right: 43vh;
+  right: 60vh;
   border-radius: 100%;
 }
 
